demo na F103CB s funkčním autorangem

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,12 @@ FW/BP_demo2/.settings/
 FW/BP_demo2/.cproject
 FW/BP_demo2/.project
 FW/BP_demo2/*.launch
+FW/BP_demo_3/Debug/
+FW/BP_demo_3/Drivers/
+FW/BP_demo_3/.settings/
+FW/BP_demo_3/.cproject
+FW/BP_demo_3/.project
+FW/BP_demo_3/*.launch
 FW/BP_demo_USB/bp_demo_usb/Debug/
 FW/BP_demo_USB/bp_demo_usb/Drivers/
 FW/BP_demo_USB/bp_demo_usb/.settings/
