Prodloužení přepínacích dob pro zvýšení stability

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ FW/BP_demo_3/.cproject
 FW/BP_demo_3/.project
 FW/BP_demo_3/*.launch
 FW/BP_demo_USB/bp_demo_usb/Debug/
+FW/BP_demo_3/Release/
 FW/BP_demo_USB/bp_demo_usb/Drivers/
 FW/BP_demo_USB/bp_demo_usb/.settings/
 FW/BP_demo_USB/bp_demo_usb/.cproject
